styles.css
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
}


body.dark-mode {
    background-color: #121212;
    color: white;
}

header {
    background-color: #333;
    color: white;
    padding: 10px 20px;
    text-align: center;
}

nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: center;
}

nav ul li {
    margin: 0 15px;
}

nav ul li a {
    color: white;
    text-decoration: none;
}

.container {
    padding: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

footer {
    background-color: #333;
    color: white;
    text-align: center;
    padding: 10px;
    position: relative;
    bottom: 0;
    width: 100%;
}

.dark-mode-toggle {
    position: fixed;
    top: 10px;
    right: 10px;
    padding: 10px;
    background-color: #444;
    color: white;
    border: none;
    cursor: pointer;
    text-align: center;
    width: 150px;
    border-radius: 5px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.carousel img {
    width: 100%;
    max-height: 600px;
    object-fit: cover;
}

table {
    width: 100%;
    border-collapse: collapse;
    margin: 20px 0;
    font-size: 1em;
    text-align: left;
}

th, td {
    border: 1px solid #ddd;
    padding: 12px;
}

th {
    background-color: #f4f4f4;
    color: #333;
    text-transform: uppercase;
}

tr:nth-child(even) {
    background-color: #f9f9f9;
}

tr:hover {
    background-color: #f1f1f1;
}

.video-wrapper {
    position: relative;
    width: 100%;
    max-width: 600px;
    padding-bottom: 56.25%;
    margin: 0 auto;
}

.video-wrapper iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border: none;
}

@media (min-width: 600px) {
    .video-wrapper {
        padding-left: 10vw;
        padding-right: 10vw;
    }
}

